*******************************************************************************
* RECENT CHANGES
*******************************************************************************

=== 1.0.32 ===
* Updated build scripts and dependencies.

=== 1.0.31 ===
* Updated build scripts and dependencies.

=== 1.0.30 ===
* Updated build scripts and dependencies.

=== 1.0.29 ===
* Added possibility to display maximums for each individual channel on the spectrum graph.
* Added shared memory links for signal analysis.
* Removed the unused 'Hue' parameter for channels.
* Updated build scripts and dependencies.

=== 1.0.28 ===
* Updated build scripts and dependencies.

=== 1.0.27 ===
* Added +12 dB compensation on measurement of the spectrum to match the amplitude
  of the pure sine wave on the graph.
* Updated build scripts and dependencies.

=== 1.0.26 ===
* Updated build scripts and dependencies.

=== 1.0.25 ===
* Updated build scripts and dependencies.

=== 1.0.24 ===
* Updated build scripts and dependencies.

=== 1.0.23 ===
* Updated build scripts and dependencies.

=== 1.0.22 ===
* Added maximum tracking option.
* Updated build scripts and dependencies.

=== 1.0.21 ===
* Updated build scripts and dependencies.

=== 1.0.20 ===
* Updated build scripts and dependencies.

=== 1.0.19 ===
* Updated build scripts and dependencies.

=== 1.0.18 ===
* Updated build scripts and dependencies.

=== 1.0.17 ===
* Updated build scripts and dependencies.

=== 1.0.16 ===
* Updated build scripts and dependencies.

=== 1.0.15 ===
* Added measure button and meter line on graph.
* Added possibility to change the thickness of lies on the spectrum graph.
* Updated build scripts and dependencies.

=== 1.0.14 ===
* Added support of Mid/Side analysis for Spectrum analyzer.
* x2 and above version of Spectrum Analyzer now enable analysis for first two
  channels by default.
* Updated build scripts and dependencies.

=== 1.0.13 ===
* Fixed invalid version number.

=== 1.0.12 ===