@@ -6,6 +6,7 @@
 			<label text="labels.mode" pad.l="6" pad.v="4"/>
 			<combo id="mode" pad.h="6" pad.v="4"/>
 			<button ui:inject="Button_cyan" text="actions.freeze" size="16" width="64" id="freeze" pad.r="6" pad.v="4"/>
+			<button pad.l="10" ui:inject="Button_cyan" text="actions.linear_frequency" size="16" width="64" id="linfreq"/>
 			<vsep bg.color="bg" pad.h="2" hreduce="true" hexpand="false"/>
 			<shmlink id="ret_0" value.maxlen="6" text.clip="true" pad.h="6" font.size="10" pad.v="4"/>
 			<void hexpand="true" hfill="true"/>
@@ -21,12 +22,18 @@
 
 						<!-- Secondary grid -->
 						<ui:with color="graph_sec">
-							<ui:for id="f" first="20" last="90" step="10">
-								<marker v="${:f}"/>
-								<marker v="${:f * 10}"/>
-								<marker v="${:f * 100}"/>
+							<ui:with visibility="!:linfreq">
+								<ui:for id="f" first="20" last="90" step="10">
+									<marker v="${:f}" />
+									<marker v="${:f * 10}" />
+									<marker v="${:f * 100}" />
+								</ui:for>
+								<marker v="20000"/>
+							</ui:with>
+							<ui:for id="f" first="1000" last="23000" step="1000">
+								<marker v="${:f}" visibility=":linfreq"/>
 							</ui:for>
-							<marker v="20000"/>
+
 							<ui:for id="g" first="-60" last="12" step="24">
 								<marker v="${g} db" ox="1" oy="0"/>
 							</ui:for>
@@ -41,9 +48,9 @@
 
 						<!-- Primary Grid -->
 						<ui:with color="graph_prim">
-							<marker v="100"/>
-							<marker v="1000"/>
-							<marker v="10000"/>
+							<marker v="100" visibility="!:linfreq"/>
+							<marker v="1000" visibility="!:linfreq"/>
+							<marker v="10000" visibility="!:linfreq"/>
 
 							<marker v="0 db" ox="1" oy="0"/>
 							<marker v="-24 db" ox="1" oy="0"/>
@@ -61,7 +68,7 @@
 						<mesh xi="0" yi="2" id="spd" width=":lthick+1" color="right" color.a="0.2" visibility="on_1"/>
 
 						<!-- Axis -->
-						<axis ui:id="main_graph_ox" angle="0.0" min="10" max="24000" color="graph_prim" log="true" visibility="false"/>
+						<axis ui:id="main_graph_ox" angle="0.0" min="10" max="24000" color="graph_prim" log="!:linfreq" visibility="false"/>
 						<axis angle="0.5" min="-72 db / :zoom" max="24 db * :zoom" color="graph_prim" log="true" visibility="false"/>
 						<axis angle="0.5" min="-1" max="1" visibility="false"/>
 
@@ -73,7 +80,7 @@
 						<marker id="sel" ox="0" oy="1" width="2" hwidth="2" editable="true" color="graph_marker_right" hcolor="graph_marker_right" pointer="hsize" visibility="(((:mode ieq 0) or (:mode ieq 1)) and ((:on_1) and (:chn ieq 1)))"/>
 
 						<!-- Text -->
-						<ui:with ox="0" oy="2" y="0" halign="1" valign="1">
+						<ui:with ox="0" oy="2" y="0" halign="1" valign="1" visibility="!:linfreq">
 							<text x="10" text="graph.units.hz"/>
 							<text x="20" text="20"/>
 							<text x="30" text="30"/>
@@ -89,6 +96,13 @@
 							<text x="10000" text="graph.values.x_k" text:value="10"/>
 							<text x="20000" text="graph.values.x_k" text:value="20"/>
 						</ui:with>
+						<ui:with ox="0" oy="2" y="0" halign="1" valign="1">
+							<text x="10" text="graph.units.hz"/>
+							<ui:for id="f" first="1" last="23"> 
+								<text x="${:f * 1000}" text="graph.values.x_k" text:value="${f}" visibility=":linfreq"/>
+							</ui:for>
+						</ui:with>
+						
 						<ui:for id="t" first="-60" last="12" step="12">
 							<text x="10" y="${t} db" text="${t}" halign="1" valign="1"/>
 						</ui:for>
@@ -110,9 +124,9 @@
 						<text ui:id="mline_level" visibility=":mline" valign="(:mlval lt 0 db) ? 1 : -1" text.valign="(:mlval lt 0 db) ? -1 : 1" ox="0" oy="1" x="24000" y=":mlval" halign="-1" color="graph_marker_line" font.bold="true"/>
 
 						<!-- Selector text -->
-						<ui:with ox="0" oy="2" y="1" valign="-1" visibility="false" pad.h="4" font.bold="true">
-							<text ui:id="selector_freq_0" x=":sel" color="graph_marker_left" visibility="(((:mode ieq 0) or (:mode ieq 1)) and ((:on_0) and (:chn ieq 0)))" halign="(:sel lt 500) ? 1 : -1" text.halign="(:sel lt 500) ? -1 : 1"/>
-							<text ui:id="selector_freq_1" x=":sel" color="graph_marker_right" visibility="(((:mode ieq 0) or (:mode ieq 1)) and ((:on_1) and (:chn ieq 1)))" halign="(:sel lt 500) ? 1 : -1" text.halign="(:sel lt 500) ? -1 : 1"/>
+						<ui:with ox="0" oy="2" y="1" valign="-1" visibility="false" pad.h="4" font.bold="true" halign="(:sel lt (:linfreq ? 12000 : 500)) ? 1 : -1" text.halign="(:sel lt (:linfreq ? 12000 : 500)) ? -1 : 1">
+							<text ui:id="selector_freq_0" x=":sel" color="graph_marker_left" visibility="(((:mode ieq 0) or (:mode ieq 1)) and ((:on_0) and (:chn ieq 0)))" />
+							<text ui:id="selector_freq_1" x=":sel" color="graph_marker_right" visibility="(((:mode ieq 0) or (:mode ieq 1)) and ((:on_1) and (:chn ieq 1)))" />
 						</ui:with>
 					</graph>
 				</group>
@@ -127,12 +141,18 @@
 
 						<!-- Secondary grid -->
 						<ui:with color="graph_prim" color.a="0.5">
-							<ui:for id="f" first="20" last="90" step="10">
-								<marker v="${:f}"/>
-								<marker v="${:f * 10}"/>
-								<marker v="${:f * 100}"/>
+							<ui:with visibility="!:linfreq">
+								<ui:for id="f" first="20" last="90" step="10">
+									<marker v="${:f}" />
+									<marker v="${:f * 10}" />
+									<marker v="${:f * 100}" />
+								</ui:for>
+								<marker v="20000"/>
+							</ui:with>
+							<ui:for id="f" first="1000" last="23000" step="1000">
+								<marker v="${:f}" visibility=":linfreq"/>
 							</ui:for>
-							<marker v="20000" color="graph_sec"/>
+							
 							<ui:for id="t" first="1" last="7" step="2">
 								<marker v="${t}" ox="1" oy="0"/>
 							</ui:for>
@@ -140,9 +160,9 @@
 
 						<!-- Primary grid -->
 						<ui:with color="graph_prim">
-							<marker v="100"/>
-							<marker v="1000"/>
-							<marker v="10000"/>
+							<marker v="100" visibility="!:linfreq"/>
+							<marker v="1000" visibility="!:linfreq"/>
+							<marker v="10000" visibility="!:linfreq"/>
 							<ui:for id="t" first="2" last="6" step="2">
 								<marker v="${t}" ox="1" oy="0"/>
 							</ui:for>
@@ -151,14 +171,14 @@
 						</ui:with>
 
 						<!-- Axis -->
-						<axis angle="0.0" min="10" ui:id="spc_single_graph_ox" max="24000" log="true" visibility="false"/>
+						<axis angle="0.0" min="10" ui:id="spc_single_graph_ox" max="24000" log="!:linfreq" visibility="false"/>
 						<axis angle="1.5" min="0" max="8" log="false" visibility="false"/>
 
 						<marker id="sel" ox="0" oy="1" width="2" hwidth="2" color="graph_marker_line" hcolor="graph_marker_line" pointer="hsize" editable="true"/>
-						<text ox="0" oy="1" y="0" valign="-1" color="graph_marker_line" pad.h="4" font.bold="true" ui:id="global_selector_spc" text="xxx" x=":sel" halign="(:sel lt 500) ? 1 : -1" text.halign="(:sel lt 500) ? -1 : 1"/>
+						<text ox="0" oy="1" y="0" valign="-1" color="graph_marker_line" pad.h="4" font.bold="true" ui:id="global_selector_spc" text="xxx" x=":sel" halign="(:sel lt (:linfreq ? 12000 : 500)) ? 1 : -1" text.halign="(:sel lt (:linfreq ? 12000 : 500)) ? -1 : 1" />
 
 						<!-- Text -->
-						<ui:with y="8" halign="1" valign="1" color="graph_prim">
+						<ui:with y="8" halign="1" valign="1" color="graph_prim" visibility="!:linfreq">
 							<text x="10" text="graph.units.hz"/>
 							<text x="20" text="20"/>
 							<text x="30" text="30"/>
@@ -173,6 +193,12 @@
 							<text x="5000" text="graph.values.x_k" text:value="5"/>
 							<text x="10000" text="graph.values.x_k" text:value="10"/>
 							<text x="20000" text="graph.values.x_k" text:value="20"/>
+						</ui:with>
+						<ui:with y="8" halign="1" valign="1" color="graph_prim" visibility=":linfreq">
+							<text x="10" text="graph.units.hz"/>
+							<ui:for id="f" first="1" last="23"> 
+								<text x="${:f * 1000}" text="graph.values.x_k" text:value="${f}"/>
+							</ui:for>
 						</ui:with>
 
 						<text x="10" y="0" text="graph.axis.time" halign="1" valign="-1" color="graph_prim"/>
@@ -193,7 +219,7 @@
 						<fbuffer id="fb1" x="0" y="1" width="0.5" height="1" transparency="0.25" angle="0" mode=":spm" color="right"/>
 
 						<!-- Secondary grid -->
-						<ui:with color="graph_prim" color.a="0.6">
+						<ui:with color="graph_prim" color.a="0.6" visibility="!:linfreq">
 							<ui:for id="f" first="20" last="90" step="10">
 								<marker v="${:f}"/>
 								<marker v="${:f * 10}"/>
@@ -205,30 +231,37 @@
 							</ui:for>
 							<marker v="20000"/>
 							<marker v="20000" o="1" ox="2" oy="1"/>
+						</ui:with>
+						<ui:with color="graph_prim" color.a="0.6" visibility=":linfreq">
+							<ui:for id="f" first="1000" last="23000" step="1000">
+								<marker v="${:f}" />
+								<marker v="${:f}" o="1" ox="2" oy="1" />
+							</ui:for>
+						</ui:with>
+						
+						<ui:with color="graph_prim" color.a="0.6">
 							<ui:for id="t" first="1" last="7" step="2">
 								<marker v="${t}" ox="1" oy="0"/>
 							</ui:for>
 						</ui:with>
-
+						
 						<!-- Primary grid -->
 						<ui:with color="graph_prim">
 							<ui:for id="c" first="0" last="1">
-								<marker v="100" o="${c}"/>
-								<marker v="1000" o="${c}"/>
-								<marker v="10000" o="${c}"/>
+								<marker v="100" o="${c}" visibility="!:linfreq"/>
+								<marker v="1000" o="${c}" visibility="!:linfreq"/>
+								<marker v="10000" o="${c}" visibility="!:linfreq"/>
 							</ui:for>
 							<ui:for id="t" first="2" last="6" step="2">
 								<marker v="${t}" ox="1" oy="0"/>
 							</ui:for>
-							<marker v="8" ox="1" oy="0" visibility="false"/>
 							<marker v="24000"/>
-							<marker v="24000" o="1" ox="2" oy="1" visibility="false"/>
 						</ui:with>
 
 						<!-- Axis -->
-						<axis ui:id="spc_dual_graph_ox_1" angle="0.0" min="10" max="24000" length=":_a_width idiv 2" log="true" visibility="false"/>
+						<axis ui:id="spc_dual_graph_ox_1" angle="0.0" min="10" max="24000" length=":_a_width idiv 2" log="!:linfreq" visibility="false"/>
 						<axis angle="1.5" min="0" max="8" log="false" visibility="false"/>
-						<axis ui:id="spc_dual_graph_ox_2" o="1" angle="0.0" min="10" max="24000" length=":_a_width idiv 2" log="true" visibility="false"/>
+						<axis ui:id="spc_dual_graph_ox_2" o="1" angle="0.0" min="10" max="24000" length=":_a_width idiv 2" log="!:linfreq" visibility="false"/>
 
 						<marker id="sel" ox="0" oy="1" width="2" hwidth="2" color="graph_marker_line" hcolor="graph_marker_line" pointer="hsize" editable="true"/>
 						<marker id="sel" ox="2" oy="1" o="1" width="2" hwidth="2" color="graph_marker_line" hcolor="graph_marker_line" pointer="hsize" editable="true"/>
@@ -239,14 +272,21 @@
 
 						<!-- Text -->
 						<ui:for id="c" first="0" last="1">
-							<ui:with y="8" halign="1" valign="1">
+							<ui:with y="8" halign="1" valign="1" visibility="!:linfreq">
 								<text x="10" o="${c}" text="graph.units.hz"/>
 								<text x="100" o="${c}" text="100"/>
 								<text x="1000" o="${c}" text="graph.values.1k"/>
 								<text x="10000" o="${c}" text="graph.values.10k"/>
 							</ui:with>
+							<ui:with y="8" halign="1" valign="1" visibility=":linfreq">
+								<text x="10" o="${c}" text="graph.units.hz"/>
+								<ui:for id="f" first="1" last="23"> 
+									<text x="${:f * 1000}" o="${c}" text="graph.values.x_k" text:value="${f}"/>
+								</ui:for>
+							</ui:with>
+							
 							<ui:for id="t" first="1" last="7">
-								<text o="${c}" text="${t}" x="10" y="${t}" halign="1" valign="1"/>
+								<text o="${c}" text="${t}" x="10" y="${t}" halign="1" valign="1" />
 							</ui:for>
 							<text o="${c}" text="graph.axis.time" x="10" y="0" halign="1" valign="-1"/>
 						</ui:for>
@@ -276,7 +316,7 @@
 						<button ui:inject="Button_cyan" text="labels.metering.measure_line" id="mline" size="16" visibility=":mode ilt 2" pad.l="15"/>
 						<label text="labels.spectrogram" visibility=":mode ige 2"/>
 						<combo id="spm" visibility=":mode ige 2"/>
-						<button ui:inject="Button_yellow" text="labels.log_scale" id="splog" size="16" visibility=":mode ige 2" pad.l="15"/>
+						<button ui:inject="Button_yellow" text="labels.log_dots" id="splog" size="16" visibility=":mode ige 2" pad.l="15"/>
 					</hbox>
 				</hbox>
 			</vbox>
